# omni-24-03-2026

./: .env.example  .gitignore  AGENT_COMPLIANCE_DASHBOARD_README.md  AGENT_INSTALLATION_README.md  AGENT_IP_CONNECTIVITY_GUIDE.md  AUTHENTICATION_SYSTEM.md  App.tsx  Audit-Compliance.ps1  CACHE_REFRESH_REQUIRED.md  COMPREHENSIVE_PROJECT_REPORT.md  Compliance_Controls_Matrix.xlsx  DEPLOYMENT_OPTIONS.md  DEPLOYMENT_PACKAGE_SUMMARY.md  DEPLOYMENT_README.md  DEPLOY_LINUX.md  DOCKER_DEPLOYMENT_GUIDE.md  Dockerfile.frontend  FEATURE_AUDIT_REPORT.md  GAPS_FIXED.md  MANUAL_TEST_GUIDE.md  NETWORK_ACCESS_GUIDE.md  PENTESTING_INTEGRATION.md  PLATFORM_COMPLETENESS.md  README.md  RUN_WITH_EXAFLUENCE.md  SETUP_GUIDE.md  SRIPRASAD_TEST_RESULTS.md  TESTING_GUIDE.md  TEST_RESULTS.md  TIMEZONE_FIX_GUIDE.md  UBUNTU_DEPLOYMENT_GUIDE.md  UBUNTU_QUICK_REFERENCE.md  USER_ACCOUNTS.md  WORKING_CREDENTIALS.txt  add_refresh_endpoint.py  add_remote_router.py  admin_collect.txt  agent_buffer_test.txt  agent_compliance_dashboard.html  agent_debug.txt  (+523 more)
rust_agent/: Cargo.toml  compliance_dashboard.html  compliance_report.json  evidence_integration_test.html  verify_backend_integration.py
rust_agent/evidence_proof/: 164.312(a)(2)(iv)_BitLocker_Encryption.md  164.312(a)(2)(iv)_TLS_Security_Configuration.md  A.10.1_TLS_Security_Configuration.md  A.12.1.2_Secure_Boot.md  A.12.2.1_Attack_Surface_Reduction.md  A.12.2.1_Windows_Defender_Antivirus.md  A.12.3.1_Controlled_Folder_Access.md  A.12.4.1_Audit_Logging_Policy.md  A.12.4.1_PowerShell_Script_Block_Logging.md  A.12.6.1_Exploit_Protection_(DEP).md  (+95 more)
(+1428 files in other folders)
