[package]
name = "rust_agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.29"
hostname = "0.3"
chrono = "0.4"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.3", features = ["v4"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
url = "2.4"
